# secret-vrf-challenge-contract

./: Cargo.toml  Makefile  deploy.sh
src/: contract.rs  msg.rs  rng.rs  state.rs
worker/js/: .env  .env.local.example  package-lock.json  package.json
worker/js/src/: worker.js
