[package]
name = "secret_roulette_example"
version = "0.1.0"
authors = [""]
edition = "2021"
resolver = "2"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
schemars = "0.8.11"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10"  }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10"  }
secret-toolkit-crypto = { version = "0.9.0", features = ["hash", "rand", "ecc-secp256k1"] }

cosmwasm-schema = "1.0.0"
secret-toolkit = { version = "0.9.0", default-features = false, features = ["utils", "storage", "serialization", "crypto", "viewing-key"] }

aes-gcm = {version = "0.10.2", default-features = false, features =["aes", "alloc"]}
generic-array = "0.14.7"

#cw-storage-plus = { version = "0.14.0", default-features = false }

secret-toolkit-storage = "0.9.0"

# custom deps
base32 = "0.4.0"
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = "0.10.6"

# Used only for schema generation
#cosmwasm-schema = { version = "1.1.0", optional = true }

#[patch.crates-io]
#cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }

